--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,250 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap');
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Barlow Semi Condensed', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body{
+  font-size: 13px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-height: 100vh;
+  background-color: hsl(210, 46%, 95%);
+}
+
+.grid-container{
+  display: grid;
+  max-width: 1150px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, min-content);
+  grid-gap: 20px;
+}
+.section{
   display: flex;
   flex-direction: column;
+  background-color: hsl(217, 19%, 35%);
+  border-radius: 15px;
+  padding: 30px 40px;
+}
+.img-heading-section{
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: hsl(0, 0%, 81%);
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.img-heading-section img{
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  margin-right: 10px;
+  border: 2px solid #fff;
+}
+.name{
+  font-weight: 600;
+  font-size: 15px;
+}
+.desc{
+  opacity: 0.5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.section-h1{
+  color: #fff;
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+
+.section-p2{
+  color: hsl(0, 0%, 81%);
+  line-height: 1.5;
+  opacity: 0.7;
+}
+
+.person-1{
+  grid-column: 1/3;
+  background-color: hsl(263, 55%, 52%);
+  background-image: url('./images/bg-pattern-quotation.svg');
+  background-repeat: no-repeat;
+  background-position: 80% 0;
+}
+
+.person-2{
+  grid-column: 3/4;
+}
+
+.person-3{
+  grid-row: 2/3;
+  grid-column: 1/2;
+  background-color: #fff;
+}
+.person-4{
+  grid-row: 2/3;
+  grid-column: 2/4;
+}
+.person-5{
+  grid-row: 1/3;
+  grid-column: 4/5;
+  background-color: #fff;
+}
+.person-3 .section-h1,
+.person-3 .img-heading-section,
+.person-3 .section-p2,
+.person-5 .section-h1,
+.person-5 .img-heading-section,
+.person-5 .section-p2{
+  color: #222;
+}
+
+@media (max-width: 1024px){
+  body{
+    padding: 20px;
   }
-  to {
-    transform: rotate(360deg);
+  grid-container{
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, min-content);
+    width: 95%;
+    grid-gap: 15px;
+  }
+  .person-1{
+    grid-column: 1/3;
+  }
+  .person-2{
+    grid-column: 3/4;
+  }
+  .person-5{
+    grid-column: 4/5;
+    grid-row: 1/3;
+  }
+  .person-1 .section-h1{
+   font-size: 30px;
+  }
+  .person-4 .section-h1{
+    font-size: 30px; 
+  }
+  .person-4 .section-p2{
+      font-size:15px;
   }
 }
+@media (max-width:1024px){
+    grid-container{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, min-content);
+        width: 50%;
+        grid-gap: 15px;
+      }
+      .person-1{
+        grid-column: 1/4;
+      }
+      .person-2{
+        grid-column: 4/5;
+      }
+      .person-3{
+        grid-column: 1/2; 
+      }
+      .person-4{
+        grid-column: 2/5;
+      }
+      .person-5{
+        grid-column: 1/5;
+        grid-row: 4/5;
+      } 
+}
+@media (min-width: 859px) and (max-width:1024px){
+    grid-container{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, min-content);
+        width: 50%;
+        grid-gap: 15px;
+      }
+      .person-1{
+        grid-column: 1/4;
+      }
+      .person-2{
+        grid-column: 4/5;
+      }
+      .person-3{
+        grid-column: 1/2; 
+      }
+      .person-4{
+        grid-column: 2/5;
+      }
+      .person-5{
+        grid-column: 1/5;
+        grid-row: 4/5;
+      } 
+      .person-1 .section-p2{
+        font-size: 20px;
+        margin-top:10px;
+       }
+}
+
+@media (max-width: 856px){
+    grid-container{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, min-content);
+        width: 50%;
+        grid-gap: 15px;
+      }
+      .person-1{
+        grid-column: 1/3;
+      }
+      .person-2{
+        grid-column: 3/5;
+      }
+      .person-3{
+        grid-column: 1/3; 
+      }
+      .person-4{
+        grid-column: 3/5;
+      }
+      .person-5{
+        grid-column: 1/5;
+        grid-row: 4/5;
+      } 
+      .person-2 .section-h1{
+        font-size: 40px;
+       }
+      .person-2 .section-p2{
+        font-size:25px;
+        margin-top:20px;
+       }
+       .person-3 .section-h1{
+        font-size: 40px;
+       }
+      .person-3 .section-p2{
+        font-size:25px;
+        margin-top:20px;
+       }
+}
+@media (max-width: 765px){
+  grid-container{
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(5, min-content);
+    width: 100%;
+    grid-gap: 15px;
+  }
+  .person-1{
+    grid-column: 1/5;
+    grid-row:1/2;
+  }
+  .person-2{
+    grid-column: 1/5;
+    grid-row:2/3;
+  }
+  .person-3{
+    grid-column: 1/5; 
+    grid-row:3/4;
+  }
+  .person-4{
+    grid-column: 1/5;
+    grid-row:4/5;
+  }
+  .person-5{
+    grid-column: 1/5;
+    grid-row: 5/6;
+  } 
+}
+
+
